# tournament-registration

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Taskfile.yaml  logs.txt  main.py  pyproject.toml  requirements.txt  ruff.toml  wsgi.py
admin/: __init__.py  api.py  front.py
api/: pyproject.toml
apis/: .env.example  pyproject.toml
apis/db/: schema.sql
apis/src/: api.py  generate_openapi.py
apis/src/apis/: admin.py  public.py
apis/src/apis/shared/: __init__.py  api_errors.py  config.py  custom_decorators.py  db.py  dependencies.py  fftt_api.py  marshmallow_schemas.py  models.py
apis/src/apis/shared/api/: api_errors.py  custom_decorators.py  dependencies.py  fftt_api.py  marshmallow_schemas.py
apis/src/shared/: models.py
apis/src/shared/api/: fftt_api.py  marshmallow_schemas.py
apis/tests/: .env.test  conftest.py
apis/tests/sample_data/: categories.sql
apis/tests/test_admin_api/: by_category.json  test_admin_add_player.py  test_admin_assign_all_bibs.py  test_admin_assign_one_bib.py  test_admin_delete_player.py  test_admin_get_all_players.py  test_admin_get_player.py  test_admin_get_players_by_category.py  test_admin_register_entries.py  test_admin_reset_bibs.py  test_admin_set_categories.py
apis/tests/test_public_api/: test_public_add_player.py  test_public_get_categories.py  test_public_get_entries.py  test_public_get_player.py  test_public_register_entries.py
countdown/: index.html
flaskr/: __init__.py  api.py  api_input_schemas.py  db.py  schema.sql
front/: .env.example  package-lock.json  package.json
public/: __init__.py  api.py  (+2 more)
(+244 files in other folders)
